@@ -19,6 +19,10 @@ $Source$
     * main.php, server_common.inc.php, server_links.inc.php,
       server_binlog.php, lang/*: Added support for displaying bin logs (RFE
       #1011770).
+    * Documentation.html, config.inc.php, libraries/common.lib.php,
+      libraries/config_import.lib.php, libraries/auth/config.auth.lib.php,
+      libraries/auth/cookie.auth.lib.php: Allow simple blocking of root login
+      (RFE #1012971), show just Access denied in case we denied it.
 
 2004-10-19 Marc Delisle  <lem9@users.sourceforge.net>
     * libraries/database_interface.lib.php: bug #1041667, correctly
